[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.dependencies]
ethers = { version = "2.0.10", features = ["ws", "rustls", "abigen"] }
alloy-sol-types = { git = "https://github.com/alloy-rs/core" }
alloy-sol-macro = { git = "https://github.com/alloy-rs/core" }
alloy-primitives = { git = "https://github.com/alloy-rs/core" }
serde_json = "1.0.93"
serde = { version = "1.0.154", features = ["derive"] }
chrono = "0.4.23"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
eyre = "0.6.8"
tokio = { version = "1.25.0", features = ["full"] }