[package]
name = "aori_types"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/aori-io/aori-sdk-rs"
description = "Aori_types, a part of the Aori.io SDK."

[dependencies]
alloy-primitives = "0.4.2" 
alloy-sol-macro = "0.4.2" 
alloy-sol-types = "0.4.2" 
chrono = "0.4.0"
ethers = "2.0.10"
once_cell = "1.17.1"
serde = "1.0.0"
serde_json = "1.0.0"